assets/llm-d/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ms-llm-d-epp-route
  namespace: llm-d
spec:
  hostnames:
  - llm-d-infra-inference-gateway.localhost
  - llm-d-infra-inference-gateway-istio.llm-d.svc.cluster.local
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: llm-d-infra-inference-gateway
    namespace: llm-d
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /v1
    backendRefs:
    - kind: Service
      name: ms-llm-d-modelservice-decode
      port: 8000
      weight: 1
